welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:3: error: unclosed character literal
  if(litMessage()=='') {
                   ^BDRBuggle:3: error: ')' expected but something found.
  if(litMessage()=='') {
                   ^BDRBuggle:5: error: ';' expected but character literal found.
  }else if(litMessage()=='A'){
                         ^